GPC/tests/examples/pass/pointers.gpc


int pointers(int **a, int *b, int c) {
    int **d = a + 6;
    int **e = a - 6;
    int *f = b + 6;
    int *g = f + 7;
    int* i = g;
    int** j = a;
    int* *k = j;
    bool h = g == f;
        
        
    return 0;
}
