GPC/tests/examples/fail/wrongArithmetics.gpc


int wrongArithmetic() {
    int a = 'h' * 'g';
    return 1;
}
